<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mxpio</groupId>
	<artifactId>mxpio-boot-parent</artifactId>
	<version>4.0.0-beta.1</version>
	<packaging>pom</packaging>
	<name>mxpio-boot</name>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.1</version>
	</parent>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<name>OSS Snapshots Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<name>OSS Staging Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<properties>
		<mxpio.version>4.0.0-beta.1</mxpio.version>
		<java.version>25</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<!--<springdoc.version>1.7.0</springdoc.version>-->
        <springdoc.version>3.0.2</springdoc.version>
		<knife4j.version>3.0.3</knife4j.version>
		<fastjson.version>1.2.83</fastjson.version>
		<druid.version>1.2.27</druid.version>
		<!--<jackson.version>2.17.0</jackson.version>-->
		<poi.version>5.5.1</poi.version>
		<liquibase.version>4.8.0</liquibase.version>
		<caffeine.version>3.2.3</caffeine.version>
		<minio.version>8.6.0</minio.version>
		<camunda.version>7.24.0</camunda.version>
		<aviator.version>4.2.7</aviator.version>
		<hutool.version>5.8.32</hutool.version>
        <bizlog-sdk.version>3.0.0</bizlog-sdk.version>
        <oauth2.server.version>7.0.3</oauth2.server.version>
        <burningwave.core.version>12.66.2</burningwave.core.version>
        <commons-pool2.version>2.13.1</commons-pool2.version>
        <cglib.version>3.3.0</cglib.version>
        <java.jwt.version>4.5.1</java.jwt.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-codec.version>1.21.0</commons-codec.version>
        <commons-io.version>2.21.0</commons-io.version>
        <assertj-core.version>3.27.7</assertj-core.version>
        <itext-asian.version>5.2.0</itext-asian.version>
        <itextpdf.version>5.5.13.5</itextpdf.version>
        <commons-fileupload.version>1.6.0</commons-fileupload.version>
        <okhttp3.version>4.12.0</okhttp3.version>
        <dom4j.version>2.2.0</dom4j.version>
        <asm.version>9.7.1</asm.version>
        <lombok.version>1.18.42</lombok.version>
	</properties>
	<modules>
		<module>mxpio-boot-base-autoconfigure</module>
		<module>mxpio-framework/mxpio-common</module>
		<module>mxpio-framework/mxpio-jpa</module>
		<module>mxpio-framework/mxpio-cache</module>
		<module>mxpio-framework/mxpio-security</module>
		<module>mxpio-framework/mxpio-system</module>
		<module>mxpio-framework/mxpio-quartz</module>
		<module>mxpio-framework/mxpio-excel</module>
		<module>mxpio-framework/mxpio-camunda</module>
		<module>mxpio-framework/mxpio-log</module>
		<module>mxpio-framework/mxpio-expression</module>
		<module>mxpio-framework/mxpio-filestorage</module>
		<module>mxpio-framework/mxpio-multitenant</module>
		<module>mxpio-framework/mxpio-dbconsole</module>
		<module>mxpio-framework/mxpio-message</module>
		<module>mxpio-framework/mxpio-websocket</module>
		<module>mxpio-framework/mxpio-cache-redis</module>
		<module>mxpio-framework/mxpio-cache-caffeine</module>
		<module>mxpio-framework/mxpio-datav</module>
		<module>mxpio-boot-modules/mxpio-dingtalk</module>
		<module>mxpio-boot-modules/mxpio-email</module>
		<module>mxpio-boot-modules/mxpio-msal</module>
		<module>mxpio-boot-modules/mxpio-oauth</module>
		<!--<module>mxpio-boot-modules/mxpio-oauth2-server</module>-->
		<module>mxpio-boot-modules/mxpio-wechat</module>
		<module>mxpio-boot-app/mxpio-webapp</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>

		<!--Spring boot 安全框架 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-access</artifactId>
        </dependency>

		<!--Spring boot Web容器 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-resource-server</artifactId>
        </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- spring boot 缓存 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<!--<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>-->

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-autoconfigure</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-common</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-jpa</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-security</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-cache</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-cache-redis</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-cache-caffeine</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-excel</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-quartz</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-system</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-camunda</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-filestorage</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-log</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-expression</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-multitenant</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-dbconsole</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-datav</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-message</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-websocket</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-dingtalk</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-email</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-oauth</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-msal</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-wechat</artifactId>
				<version>${mxpio.version}</version>
			</dependency>

            <!--<dependency>
                <groupId>com.mxpio</groupId>
                <artifactId>mxpio-oauth2-server</artifactId>
                <version>${mxpio.version}</version>
            </dependency>-->

			<dependency>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-core</artifactId>
				<version>${liquibase.version}</version>
			</dependency>

			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>${cglib.version}</version>
			</dependency>

			<!--Spring boot Redis -->
			<!--spring boot 集成redis所需common-pool2 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-pool2</artifactId>
				<version>${commons-pool2.version}</version>
			</dependency>

			<!--<dependency>
			   <groupId>org.springdoc</groupId>
			   <artifactId>springdoc-openapi-ui</artifactId>
			   <version>${springdoc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-webmvc-core</artifactId>
				<version>${springdoc.version}</version>
			</dependency>
			<dependency>
		        <groupId>com.github.xiaoymin</groupId>
		        <artifactId>knife4j-springdoc-ui</artifactId>
		        <version>${knife4j.version}</version>
		    </dependency>-->

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

		    <!--<dependency>
			    <groupId>org.camunda.bpm.springboot</groupId>
			    <artifactId>camunda-bpm-spring-boot-starter</artifactId>
			    <version>${camunda.version}</version>
			</dependency>-->
            <dependency>
                <groupId>team.vme50</groupId>
                <artifactId>camunda7-spring-boot-starter</artifactId>
                <version>${camunda.version}</version>
            </dependency>

			<dependency>
			    <groupId>org.camunda.bpm.springboot</groupId>
			    <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
			    <version>${camunda.version}</version>
			</dependency>

			<!-- druid数据源驱动 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- fastjson -->
			<dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>${java.jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
			    <groupId>commons-io</groupId>
			    <artifactId>commons-io</artifactId>
			    <version>${commons-io.version}</version>
			</dependency>

			<!-- poi -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-excelant</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-lite</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itextpdf</artifactId>
				<version>${itextpdf.version}</version>
			</dependency>
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itext-asian</artifactId>
				<version>${itext-asian.version}</version>
			</dependency>
			<!-- Aviator -->
			<dependency>
				<groupId>com.googlecode.aviator</groupId>
				<artifactId>aviator</artifactId>
				<version>${aviator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj-core.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-http</artifactId>
				<version>${hutool.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>${caffeine.version}</version>
			</dependency>

			<dependency>
				<groupId>io.minio</groupId>
				<artifactId>minio</artifactId>
				<version>${minio.version}</version>
			</dependency>

            <dependency>
                <groupId>io.github.mouzt</groupId>
                <artifactId>bizlog-sdk</artifactId>
                <version>${bizlog-sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-authorization-server</artifactId>
                <version>${oauth2.server.version}</version>
            </dependency>

            <dependency>
                <groupId>org.burningwave</groupId>
                <artifactId>core</artifactId>
                <version>${burningwave.core.version}</version>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp3.version}</version>
            </dependency>

            <dependency>
                <groupId>org.dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>


		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-proc:full</arg> <!-- 显式启用完整的注解处理 -->
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version> <!-- 与依赖版本一致 -->
                        </path>
                    </annotationProcessorPaths>
				</configuration>
			</plugin>
			<!-- 打包跳过测试 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<!-- 要将源码放上去，需要加入这个插件 -->
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalJOption>-Xdoclint:none</additionalJOption>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- 避免font文件的二进制文件格式压缩破坏 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>woff</nonFilteredFileExtension>
						<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
						<nonFilteredFileExtension>eot</nonFilteredFileExtension>
						<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
						<nonFilteredFileExtension>svg</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<!-- GPG mvn clean deploy -P release -Dgpg.passphrase=YourPassphase -->
			<!--<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.ftl</include>
				</includes>
			</resource>
		</resources>
	</build>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://gitee.com/i_mxpio/mxpio-boot/blob/master/LICENSE</url>
			<distribution>repo,manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>MxpIO</name>
			<email>i@mxpio.com</email>
			<organization>MxpIO</organization>
			<url>https://gitee.com/i_mxpio</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://gitee.com/i_mxpio/mxpio-boot.git</connection>
		<developerConnection>scm:git:https://gitee.com/i_mxpio/mxpio-boot.git</developerConnection>
		<url>https://gitee.com/i_mxpio/mxpio-boot.git</url>
		<tag>4.0.0-beta.1</tag>
	</scm>
</project>
